crates/forge-template/tests/snapshots/snapshot_tests__entity__product_categories_entity_ts.snap
---
source: crates/forge-template/tests/snapshot_tests.rs
expression: file.contents
---
import { Entity, PrimaryGeneratedColumn, Column } from 'typeorm';

@Entity()
export class ProductCategories {
  @PrimaryGeneratedColumn()
  id: number;
}
